# MCR2

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/mcr2/: __init__.py  _computation_primitives.py  _validity.py  computation_primitives.py  invariance.py  supervised.py  supervised_coding_rate_calculator.py  supervised_mcr2_loss.py  unsupervised.py  unsupervised_coding_rate_calculator.py  unsupervised_mcr2_loss.py  validity.py
src/mcr2/algo/: __init__.py
src/mcr2/coding_rate/: __init__.py  supervised.py
src/mcr2/functional/: __init__.py  class_info.py  fft.py  gramian.py  logdet.py  normalize.py  products.py
src/mcr2/ldr/: __init__.py  supervised.py
src/mcr2/losses/: ctrl.py  mcr2.py
src/mcr2/mcr2/: __init__.py  supervised.py
src/mcr2/primitives/: coding_rate.py  logdet.py  products.py  statistics.py
src/mcr2/redunet/: __init__.py  redublock.py
test/: utils.py
test/mcr2/coding_rate/: test_shift_invariant.py  test_translation_invariant.py  test_vector.py
test/mcr2/functional/: test_class_info.py  test_fft.py  test_gramian.py  test_logdet.py  test_normalize.py  test_products.py
test/mcr2/ldr/: test_supervised.py
test/mcr2/losses/: ctrl.py  mcr2.py  test_ctrl.py  test_mcr2.py
test/mcr2/mcr2/: test_shift_invariant.py  test_translation_invariant.py  test_vector.py
test/mcr2/primitives/: coding_rate.py  logdet.py  products.py  statistics.py  test_coding_rate.py  test_logdet.py  test_products.py  test_statistics.py
test/mcr2/redunet/: test_shift_invariant_redunet.py  test_translation_invariant_redunet.py  test_vector_redunet.py
(+29 files in other folders)
