[metadata]
name = mcr2
version = 1.0.1
author = Druv Pai
author_email = druvpai@berkeley.edu
description = A performant implementation of the principle of Maximum Coding Rate Reduction (MCR2).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/druvpai/MCR2
project_urls =
    Bug Tracker = https://github.com/druvpai/MCR2/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
